--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,15 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 
+find_path(STB_INCLUDE_DIRS "stb.h")
+include_directories(${STB_INCLUDE_DIRS})
+
 link_libraries(glfw)
 link_libraries(glad::glad)
 link_libraries(glm::glm)
+
+file(COPY ${CMAKE_SOURCE_DIR}/resources/shaders/
+        DESTINATION ${CMAKE_BINARY_DIR}/resources/shaders/)
 
 file(GLOB_RECURSE SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/*.cpp)
 file(GLOB_RECURSE HEADER_FILES ${CMAKE_SOURCE_DIR}/src/*.h)
